remove leftover --enable-preview flag